tests/ui/delegation/target-expr-removal-defs-inside.stderr
error[E0433]: cannot find module or crate `some` in this scope
  --> $DIR/target-expr-removal-defs-inside.rs:49:5
   |
LL |     some::path::<{ fn foo() {} }>::xd();
   |     ^^^^ use of unresolved module or unlinked crate `some`
   |
   = help: you might be missing a crate named `some`

error[E0433]: cannot find module or crate `some` in this scope
  --> $DIR/target-expr-removal-defs-inside.rs:49:5
   |
LL |     some::path::<{ fn foo() {} }>::xd();
   |     ^^^^ use of unresolved module or unlinked crate `some`
   |
   = help: you might be missing a crate named `some`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0433]: cannot find module or crate `some` in this scope
  --> $DIR/target-expr-removal-defs-inside.rs:49:5
   |
LL |     some::path::<{ fn foo() {} }>::xd();
   |     ^^^^ use of unresolved module or unlinked crate `some`
   |
   = help: you might be missing a crate named `some`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0433]: cannot find module or crate `some` in this scope
  --> $DIR/target-expr-removal-defs-inside.rs:49:5
   |
LL |     some::path::<{ fn foo() {} }>::xd();
   |     ^^^^ use of unresolved module or unlinked crate `some`
   |
   = help: you might be missing a crate named `some`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: attempted to delete delegation's target expression that contains definitions inside
  --> $DIR/target-expr-removal-defs-inside.rs:16:24
   |
LL |   reuse impl Trait for S {
   |  ________________________^
...  |
LL | |     self.0
LL | | }
   | |_^

error: attempted to delete delegation's target expression that contains definitions inside
  --> $DIR/target-expr-removal-defs-inside.rs:16:24
   |
LL |   reuse impl Trait for S {
   |  ________________________^
...  |
LL | |     self.0
LL | | }
   | |_^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: attempted to delete delegation's target expression that contains definitions inside
  --> $DIR/target-expr-removal-defs-inside.rs:16:24
   |
LL |   reuse impl Trait for S {
   |  ________________________^
...  |
LL | |     self.0
LL | | }
   | |_^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: attempted to delete delegation's target expression that contains definitions inside
  --> $DIR/target-expr-removal-defs-inside.rs:16:24
   |
LL |   reuse impl Trait for S {
   |  ________________________^
...  |
LL | |     self.0
LL | | }
   | |_^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: attempted to delete delegation's target expression that contains definitions inside
  --> $DIR/target-expr-removal-defs-inside.rs:35:25
   |
LL |   reuse impl Trait for S1 {
   |  _________________________^
...  |
LL | |     self.0
LL | | }
   | |_^

error: attempted to delete delegation's target expression that contains definitions inside
  --> $DIR/target-expr-removal-defs-inside.rs:35:25
   |
LL |   reuse impl Trait for S1 {
   |  _________________________^
...  |
LL | |     self.0
LL | | }
   | |_^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: attempted to delete delegation's target expression that contains definitions inside
  --> $DIR/target-expr-removal-defs-inside.rs:35:25
   |
LL |   reuse impl Trait for S1 {
   |  _________________________^
...  |
LL | |     self.0
LL | | }
   | |_^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: attempted to delete delegation's target expression that contains definitions inside
  --> $DIR/target-expr-removal-defs-inside.rs:35:25
   |
LL |   reuse impl Trait for S1 {
   |  _________________________^
...  |
LL | |     self.0
LL | | }
   | |_^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: attempted to delete delegation's target expression that contains definitions inside
  --> $DIR/target-expr-removal-defs-inside.rs:58:25
   |
LL |   reuse impl Trait for S2 {
   |  _________________________^
...  |
LL | |     self.0
LL | | }
   | |_^

error: attempted to delete delegation's target expression that contains definitions inside
  --> $DIR/target-expr-removal-defs-inside.rs:58:25
   |
LL |   reuse impl Trait for S2 {
   |  _________________________^
...  |
LL | |     self.0
LL | | }
   | |_^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: attempted to delete delegation's target expression that contains definitions inside
  --> $DIR/target-expr-removal-defs-inside.rs:58:25
   |
LL |   reuse impl Trait for S2 {
   |  _________________________^
...  |
LL | |     self.0
LL | | }
   | |_^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: attempted to delete delegation's target expression that contains definitions inside
  --> $DIR/target-expr-removal-defs-inside.rs:58:25
   |
LL |   reuse impl Trait for S2 {
   |  _________________________^
...  |
LL | |     self.0
LL | | }
   | |_^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0053]: method `static_self` has an incompatible type for trait
  --> $DIR/target-expr-removal-defs-inside.rs:16:1
   |
LL | / reuse impl Trait for S {
...  |
LL | |     self.0
LL | | }
   | |_^ expected `F`, found `()`
   |
note: type in trait
  --> $DIR/target-expr-removal-defs-inside.rs:4:25
   |
LL |     fn static_self() -> F { F }
   |                         ^
   = note: expected signature `fn() -> F`
              found signature `fn() -> ()`
help: change the output type to match the trait
   |
LL - reuse impl Trait for S {
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -     struct Def {}
LL -     self.0
LL - }
LL +  -> F
   |

error[E0050]: method `static_value` has 0 parameters but the declaration in trait `Trait::static_value` has 1
  --> $DIR/target-expr-removal-defs-inside.rs:16:1
   |
LL |       fn static_value(_: Self) -> i32 { 1 }
   |                          ---- trait requires 1 parameter
...
LL | / reuse impl Trait for S {
...  |
LL | |     self.0
LL | | }
   | |_^ expected 1 parameter, found 0

error[E0050]: method `static_mut_ref` has 0 parameters but the declaration in trait `Trait::static_mut_ref` has 1
  --> $DIR/target-expr-removal-defs-inside.rs:16:1
   |
LL |       fn static_mut_ref(_: &mut Self) -> i32 { 2 }
   |                            --------- trait requires 1 parameter
...
LL | / reuse impl Trait for S {
...  |
LL | |     self.0
LL | | }
   | |_^ expected 1 parameter, found 0

error[E0050]: method `static_ref` has 0 parameters but the declaration in trait `Trait::static_ref` has 1
  --> $DIR/target-expr-removal-defs-inside.rs:16:1
   |
LL |       fn static_ref(_: &Self) -> i32 { 3 }
   |                        ----- trait requires 1 parameter
...
LL | / reuse impl Trait for S {
...  |
LL | |     self.0
LL | | }
   | |_^ expected 1 parameter, found 0

error[E0053]: method `static_self` has an incompatible type for trait
  --> $DIR/target-expr-removal-defs-inside.rs:35:1
   |
LL | / reuse impl Trait for S1 {
...  |
LL | |     self.0
LL | | }
   | |_^ expected `F`, found `()`
   |
note: type in trait
  --> $DIR/target-expr-removal-defs-inside.rs:4:25
   |
LL |     fn static_self() -> F { F }
   |                         ^
   = note: expected signature `fn() -> F`
              found signature `fn() -> ()`
help: change the output type to match the trait
   |
LL - reuse impl Trait for S1 {
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -     some::path::<{ fn foo() {} }>::xd();
LL -
LL -
LL -
LL -
LL -     self.0
LL - }
LL +  -> F
   |

error[E0050]: method `static_value` has 0 parameters but the declaration in trait `Trait::static_value` has 1
  --> $DIR/target-expr-removal-defs-inside.rs:35:1
   |
LL |       fn static_value(_: Self) -> i32 { 1 }
   |                          ---- trait requires 1 parameter
...
LL | / reuse impl Trait for S1 {
...  |
LL | |     self.0
LL | | }
   | |_^ expected 1 parameter, found 0

error[E0050]: method `static_mut_ref` has 0 parameters but the declaration in trait `Trait::static_mut_ref` has 1
  --> $DIR/target-expr-removal-defs-inside.rs:35:1
   |
LL |       fn static_mut_ref(_: &mut Self) -> i32 { 2 }
   |                            --------- trait requires 1 parameter
...
LL | / reuse impl Trait for S1 {
...  |
LL | |     self.0
LL | | }
   | |_^ expected 1 parameter, found 0

error[E0050]: method `static_ref` has 0 parameters but the declaration in trait `Trait::static_ref` has 1
  --> $DIR/target-expr-removal-defs-inside.rs:35:1
   |
LL |       fn static_ref(_: &Self) -> i32 { 3 }
   |                        ----- trait requires 1 parameter
...
LL | / reuse impl Trait for S1 {
...  |
LL | |     self.0
LL | | }
   | |_^ expected 1 parameter, found 0

error[E0053]: method `static_self` has an incompatible type for trait
  --> $DIR/target-expr-removal-defs-inside.rs:58:1
   |
LL | / reuse impl Trait for S2 {
...  |
LL | |     self.0
LL | | }
   | |_^ expected `F`, found `()`
   |
note: type in trait
  --> $DIR/target-expr-removal-defs-inside.rs:4:25
   |
LL |     fn static_self() -> F { F }
   |                         ^
   = note: expected signature `fn() -> F`
              found signature `fn() -> ()`
help: change the output type to match the trait
   |
LL - reuse impl Trait for S2 {
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -     fn foo() {}
LL -     self.0
LL - }
LL +  -> F
   |

error[E0050]: method `static_value` has 0 parameters but the declaration in trait `Trait::static_value` has 1
  --> $DIR/target-expr-removal-defs-inside.rs:58:1
   |
LL |       fn static_value(_: Self) -> i32 { 1 }
   |                          ---- trait requires 1 parameter
...
LL | / reuse impl Trait for S2 {
...  |
LL | |     self.0
LL | | }
   | |_^ expected 1 parameter, found 0

error[E0050]: method `static_mut_ref` has 0 parameters but the declaration in trait `Trait::static_mut_ref` has 1
  --> $DIR/target-expr-removal-defs-inside.rs:58:1
   |
LL |       fn static_mut_ref(_: &mut Self) -> i32 { 2 }
   |                            --------- trait requires 1 parameter
...
LL | / reuse impl Trait for S2 {
...  |
LL | |     self.0
LL | | }
   | |_^ expected 1 parameter, found 0

error[E0050]: method `static_ref` has 0 parameters but the declaration in trait `Trait::static_ref` has 1
  --> $DIR/target-expr-removal-defs-inside.rs:58:1
   |
LL |       fn static_ref(_: &Self) -> i32 { 3 }
   |                        ----- trait requires 1 parameter
...
LL | / reuse impl Trait for S2 {
...  |
LL | |     self.0
LL | | }
   | |_^ expected 1 parameter, found 0

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/target-expr-removal-defs-inside.rs:16:1
   |
LL |    reuse impl Trait for S {
   |   _^                      -
   |  |________________________|
...  ||
LL | ||     self.0
LL | || }
   | ||_^ unexpected argument
   |  |_|
   |
   |
note: associated function defined here
  --> $DIR/target-expr-removal-defs-inside.rs:4:8
   |
LL |     fn static_self() -> F { F }
   |        ^^^^^^^^^^^
help: remove the extra argument
   |
LL - reuse impl Trait for S {
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -     struct Def {}
LL -     self.0
LL - }
LL + reuse impl Trait for S }
   |

error[E0308]: mismatched types
  --> $DIR/target-expr-removal-defs-inside.rs:16:1
   |
LL | / reuse impl Trait for S {
...  |
LL | |     self.0
LL | | }
   | | ^- help: consider using a semicolon here: `;`
   | | |
   | |_expected `()`, found `F`
   |   expected `()` because of default return type

error[E0308]: mismatched types
  --> $DIR/target-expr-removal-defs-inside.rs:16:1
   |
LL | / reuse impl Trait for S {
...  |
LL | |     self.0
LL | | }
   | | ^- help: consider using a semicolon here: `;`
   | | |
   | |_expected `()`, found `i32`
   |   expected `()` because of default return type

error[E0308]: mismatched types
  --> $DIR/target-expr-removal-defs-inside.rs:16:1
   |
LL | / reuse impl Trait for S {
...  |
LL | |     self.0
LL | | }
   | | ^- help: consider using a semicolon here: `;`
   | | |
   | |_expected `()`, found `i32`
   |   expected `()` because of default return type
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0308]: mismatched types
  --> $DIR/target-expr-removal-defs-inside.rs:16:1
   |
LL | / reuse impl Trait for S {
...  |
LL | |     self.0
LL | | }
   | | ^- help: consider using a semicolon here: `;`
   | | |
   | |_expected `()`, found `i32`
   |   expected `()` because of default return type
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/target-expr-removal-defs-inside.rs:35:1
   |
LL |    reuse impl Trait for S1 {
   |   _^                       -
   |  |_________________________|
...  ||
LL | ||     self.0
LL | || }
   | ||_^ unexpected argument
   |  |_|
   |
   |
note: associated function defined here
  --> $DIR/target-expr-removal-defs-inside.rs:4:8
   |
LL |     fn static_self() -> F { F }
   |        ^^^^^^^^^^^
help: remove the extra argument
   |
LL - reuse impl Trait for S1 {
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -     some::path::<{ fn foo() {} }>::xd();
LL -
LL -
LL -
LL -
LL -     self.0
LL - }
LL + reuse impl Trait for S1 }
   |

error[E0308]: mismatched types
  --> $DIR/target-expr-removal-defs-inside.rs:35:1
   |
LL | / reuse impl Trait for S1 {
...  |
LL | |     self.0
LL | | }
   | | ^- help: consider using a semicolon here: `;`
   | | |
   | |_expected `()`, found `F`
   |   expected `()` because of default return type

error[E0308]: mismatched types
  --> $DIR/target-expr-removal-defs-inside.rs:35:1
   |
LL | / reuse impl Trait for S1 {
...  |
LL | |     self.0
LL | | }
   | | ^- help: consider using a semicolon here: `;`
   | | |
   | |_expected `()`, found `i32`
   |   expected `()` because of default return type

error[E0308]: mismatched types
  --> $DIR/target-expr-removal-defs-inside.rs:35:1
   |
LL | / reuse impl Trait for S1 {
...  |
LL | |     self.0
LL | | }
   | | ^- help: consider using a semicolon here: `;`
   | | |
   | |_expected `()`, found `i32`
   |   expected `()` because of default return type
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0308]: mismatched types
  --> $DIR/target-expr-removal-defs-inside.rs:35:1
   |
LL | / reuse impl Trait for S1 {
...  |
LL | |     self.0
LL | | }
   | | ^- help: consider using a semicolon here: `;`
   | | |
   | |_expected `()`, found `i32`
   |   expected `()` because of default return type
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/target-expr-removal-defs-inside.rs:58:1
   |
LL |    reuse impl Trait for S2 {
   |   _^                       -
   |  |_________________________|
...  ||
LL | ||     self.0
LL | || }
   | ||_^ unexpected argument
   |  |_|
   |
   |
note: associated function defined here
  --> $DIR/target-expr-removal-defs-inside.rs:4:8
   |
LL |     fn static_self() -> F { F }
   |        ^^^^^^^^^^^
help: remove the extra argument
   |
LL - reuse impl Trait for S2 {
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -
LL -     fn foo() {}
LL -     self.0
LL - }
LL + reuse impl Trait for S2 }
   |

error[E0308]: mismatched types
  --> $DIR/target-expr-removal-defs-inside.rs:58:1
   |
LL | / reuse impl Trait for S2 {
...  |
LL | |     self.0
LL | | }
   | | ^- help: consider using a semicolon here: `;`
   | | |
   | |_expected `()`, found `F`
   |   expected `()` because of default return type

error[E0308]: mismatched types
  --> $DIR/target-expr-removal-defs-inside.rs:58:1
   |
LL | / reuse impl Trait for S2 {
...  |
LL | |     self.0
LL | | }
   | | ^- help: consider using a semicolon here: `;`
   | | |
   | |_expected `()`, found `i32`
   |   expected `()` because of default return type

error[E0308]: mismatched types
  --> $DIR/target-expr-removal-defs-inside.rs:58:1
   |
LL | / reuse impl Trait for S2 {
...  |
LL | |     self.0
LL | | }
   | | ^- help: consider using a semicolon here: `;`
   | | |
   | |_expected `()`, found `i32`
   |   expected `()` because of default return type
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0308]: mismatched types
  --> $DIR/target-expr-removal-defs-inside.rs:58:1
   |
LL | / reuse impl Trait for S2 {
...  |
LL | |     self.0
LL | | }
   | | ^- help: consider using a semicolon here: `;`
   | | |
   | |_expected `()`, found `i32`
   |   expected `()` because of default return type
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 43 previous errors

Some errors have detailed explanations: E0050, E0053, E0061, E0308, E0433.
For more information about an error, try `rustc --explain E0050`.
